# connors-core

./: .python-version  README.md  pyproject.toml
.github/workflows/: build-env.yml  ci.yml
connors_core/: __init__.py
connors_core/config/: __init__.py  manager.py
connors_core/core/: __init__.py  event_bus.py  logging.py  market_data.py  parameter_override.py  registry.py  storage.py  strategy.py  strategy_parameter_override.py
connors_core/indicators/: __init__.py  base_talipp_indicator.py  talipp_backtesting.py
connors_core/metrics/: __init__.py  metrics.py
connors_core/screening/: config_loader.py
connors_core/screening/configs/: __init__.py  finviz_rsi2.py  tradingview_crypto_basic.py  tradingview_momentum.py  tradingview_rsi2.py  tradingview_value.py
connors_core/screening/providers/: __init__.py  finviz.py  tradingview.py  tradingview_crypto.py
connors_core/services/: __init__.py
connors_core/utils/: __init__.py  datetime_utils.py
tests/: test_event_bus.py  test_metrics.py  test_registry_generic.py  test_storage.py  test_strategy.py
