[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connors-core"
version = "0.1.0"
description = "Core components for Connors trading system - registry, config, indicators, metrics, screening"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Connors Trading Team", email = "your.email@example.com"},
]
maintainers = [
    {name = "Connors Trading Team", email = "your.email@example.com"},
]
keywords = ["trading", "finance", "registry", "indicators", "screening", "metrics", "connors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    # Core data handling
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Technical indicators
    "talipp>=2.3.0",
    # Statistics
    "scipy>=1.11.0",
    # Configuration and validation
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    # Date/time handling
    "pytz>=2023.3",
    # Logging
    "colorlog>=6.8.0",
    # HTTP requests (for screening providers)
    "httpx>=0.25.0",
    "requests>=2.31.0",
    # YAML support (for config loader)
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]
types = [
    "types-requests>=2.31.0",
    "types-pytz>=2023.3.0",
    "pandas-stubs>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/marcelohack/connors-core"
Repository = "https://github.com/marcelohack/connors-core"
Issues = "https://github.com/marcelohack/connors-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["connors_core*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"connors_core" = ["py.typed"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["connors_core"]

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "talipp.*",
    "scipy.*",
    "colorlog.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=connors_core",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["connors_core"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
